# job

./: .gitignore
autotools/: .gitignore  README.md  configure.ac
autotools/src/: Makefile.am  function.c  function.h  main.c  myconfig.h
calculator/: README.md  start.py
codewars/: sudoku_solution_validator.cpp
gluchytelefon/: Makefile  README.md
gluchytelefon/genetlink/: Makefile  genetlink.c  genetlink.h
gluchytelefon/lkm/: Makefile  jajko.c  jajko.h
gluchytelefon/src/: 1konsola.c  1konsola.h  1konsola.py  2argument.c  2argument.h  3pipe.c  3pipe.h  4jajko.c  4jajko.h  5netlink.c  5netlink.h  6siec.c  6siec.h  Makefile  genl.c  genl.h  gluchytelefon.c  gluchytelefon.h
hatbar/: README.md  bar.js
memmath/: README.md  cli.php  math.php  memmath.c  memmath.class.php
memmath/c/: cli.c  makefile  memmath.c  memmath.h
memmath/php/: cli.php  memmath.class.php
rstemp/: Makefile  README.md  rstemp-w1.c  rstemp.c
rstemp/manual/: 1-wire.txt  README.md  kompilacja_wlasnego_pakietu.txt  lcd.txt  przygotowanie_i_uruchomienie.txt  rstemp.fzz
rstemp/src/: config.h  config_prod.h  makefile  rstemp-func.c  rstemp-func.h  rstemp-lcd.c  rstemp-lcd.h  rstemp-w1.c  rstemp-w1.h  rstemp.c
